--- a/src/formularios/InterfazConversorDistancia.form
+++ b/src/formularios/InterfazConversorDistancia.form
@@ -10,7 +10,7 @@
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <AccessibilityProperties>
-    <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Conversor de Peso"/>
+    <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Conversor de Distancia"/>
   </AccessibilityProperties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -86,11 +86,11 @@
                 <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
                   <ComponentRef name="background"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Conversor de Peso"/>
+                <Property name="text" type="java.lang.String" value="Conversor de Distancia"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="40" y="0" width="-1" height="30"/>
+                  <AbsoluteConstraints x="20" y="0" width="-1" height="30"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -185,11 +185,16 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="470" y="280" width="-1" height="20"/>
+              <AbsoluteConstraints x="470" y="360" width="-1" height="20"/>
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JLabel" name="backgroundPeso">
+        <Component class="javax.swing.JLabel" name="backgroundDistancia">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/imagenes/backgroundDistancia.png"/>
+            </Property>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="390" y="0" width="260" height="380"/>
@@ -202,13 +207,13 @@
               <Font name="Roboto Black" size="24" style="1"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagenes/ConversorPesologo.png"/>
+              <Image iconType="3" name="/imagenes/ConversorDistancialogo.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value=" &#xa1;BIENVENIDO!"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="80" y="10" width="-1" height="-1"/>
+              <AbsoluteConstraints x="70" y="10" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -232,7 +237,7 @@
                   <Font name="Roboto Medium" size="12" style="3"/>
                 </Property>
                 <Property name="lineWrap" type="boolean" value="true"/>
-                <Property name="text" type="java.lang.String" value="Programa que convierte una medici&#xf3;n de peso a otro tipo de medici&#xf3;n de peso."/>
+                <Property name="text" type="java.lang.String" value="Programa que convierte una medici&#xf3;n de distancia a otro tipo de medici&#xf3;n de distancia."/>
                 <Property name="toolTipText" type="java.lang.String" value=""/>
                 <Property name="wrapStyleWord" type="boolean" value="true"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -247,7 +252,7 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JLabel" name="labelPeso">
+        <Component class="javax.swing.JLabel" name="labelDistancia">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Roboto" size="12" style="1"/>
@@ -266,14 +271,16 @@
               <Font name="Roboto" size="12" style="1"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="7">
+              <StringArray count="9">
                 <StringItem index="0" value="Seleccione una conversi&#xf3;n"/>
-                <StringItem index="1" value="kilogramos"/>
-                <StringItem index="2" value="gramos"/>
-                <StringItem index="3" value="miligramos"/>
-                <StringItem index="4" value="libras"/>
-                <StringItem index="5" value="onzas"/>
-                <StringItem index="6" value="toneladas"/>
+                <StringItem index="1" value="kilometros"/>
+                <StringItem index="2" value="metros"/>
+                <StringItem index="3" value="centimetros"/>
+                <StringItem index="4" value="milimetros"/>
+                <StringItem index="5" value="pulgadas"/>
+                <StringItem index="6" value="pies"/>
+                <StringItem index="7" value="yardas"/>
+                <StringItem index="8" value="millas"/>
               </StringArray>
             </Property>
             <Property name="focusable" type="boolean" value="false"/>
@@ -306,7 +313,7 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JTextField" name="cajaTextoPeso">
+        <Component class="javax.swing.JTextField" name="cajaTextoDistancia">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Roboto" size="14" style="0"/>
@@ -319,9 +326,9 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="caretUpdate" listener="javax.swing.event.CaretListener" parameters="javax.swing.event.CaretEvent" handler="cajaTextoPesoCaretUpdate"/>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="cajaTextoPesoMouseClicked"/>
-            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cajaTextoPesoKeyTyped"/>
+            <EventHandler event="caretUpdate" listener="javax.swing.event.CaretListener" parameters="javax.swing.event.CaretEvent" handler="cajaTextoDistanciaCaretUpdate"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="cajaTextoDistanciaMouseClicked"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cajaTextoDistanciaKeyTyped"/>
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -349,7 +356,7 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JSeparator" name="lineaTemperatura">
+        <Component class="javax.swing.JSeparator" name="lineaDistancia">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="160" y="170" width="170" height="20"/>
@@ -362,14 +369,16 @@
               <Font name="Roboto" size="12" style="1"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="7">
+              <StringArray count="9">
                 <StringItem index="0" value="Seleccione una conversi&#xf3;n"/>
-                <StringItem index="1" value="kilogramos"/>
-                <StringItem index="2" value="gramos"/>
-                <StringItem index="3" value="miligramos"/>
-                <StringItem index="4" value="libras"/>
-                <StringItem index="5" value="onzas"/>
-                <StringItem index="6" value="toneladas"/>
+                <StringItem index="1" value="kilometros"/>
+                <StringItem index="2" value="metros"/>
+                <StringItem index="3" value="centimetros"/>
+                <StringItem index="4" value="milimetros"/>
+                <StringItem index="5" value="pulgadas"/>
+                <StringItem index="6" value="pies"/>
+                <StringItem index="7" value="yardas"/>
+                <StringItem index="8" value="millas"/>
               </StringArray>
             </Property>
             <Property name="focusable" type="boolean" value="false"/>
