--- a/src/formularios/InterfazConversorDistancia.form
+++ b/src/formularios/InterfazConversorDistancia.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Conversor de Temperatura"/>
+    <Property name="title" type="java.lang.String" value="Conversor de Distancia"/>
     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
       <Font name="Roboto" size="12" style="1"/>
     </Property>
